create table reaction

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ server:
 spring:
   datasource:
     password: 123456
-    url: jdbc:postgresql://localhost:5432/TestProjectDb
+    url: jdbc:postgresql://localhost:5432/LiquibaseDb
     username: postgres
   jpa:
     hibernate:
